<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">jkeeling-To Do List</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="add_box">New Item Here</string>
    <string name="options">Options</string>
    <string name="done_btn">Done</string>
    <string name="archive">Go to Archive</string>
    <string name="summary">Summary</string>
    <string name="all_archive">Archive All</string>
    <string name="select_archive">Archive Selected</string>
    <string name="select_email">Email Selected</string>
    <string name="all_email">Email All</string>
    <string name="title_activity_summary">Summary</string>
    <string name="title_activity_archive">Archived Items</string>
    <string name="all_unarchive">Unarchive All</string>
    <string name="select_unarchive">Unarchive Selected</string>
    <string name="main">Go to Active List</string>

</resources>
